Supcategories labels size according to table's width

--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -314,8 +314,17 @@ border-style:none;</string>
          <layout class="QVBoxLayout" name="verticalLayout_2">
           <item>
            <layout class="QHBoxLayout" name="entryLabelLayout">
+            <property name="spacing">
+             <number>0</number>
+            </property>
             <item>
-             <widget class="QLabel" name="entryLabel2">
+             <widget class="QLabel" name="entryLabel1">
+              <property name="sizePolicy">
+               <sizepolicy hsizetype="Expanding" vsizetype="Minimum">
+                <horstretch>0</horstretch>
+                <verstretch>0</verstretch>
+               </sizepolicy>
+              </property>
               <property name="frameShape">
                <enum>QFrame::Box</enum>
               </property>
@@ -328,7 +337,13 @@ border-style:none;</string>
              </widget>
             </item>
             <item>
-             <widget class="QLabel" name="entryLabel1">
+             <widget class="QLabel" name="entryLabel2">
+              <property name="sizePolicy">
+               <sizepolicy hsizetype="Expanding" vsizetype="Preferred">
+                <horstretch>0</horstretch>
+                <verstretch>0</verstretch>
+               </sizepolicy>
+              </property>
               <property name="frameShape">
                <enum>QFrame::Box</enum>
               </property>
@@ -342,6 +357,12 @@ border-style:none;</string>
             </item>
             <item>
              <widget class="QLabel" name="entryLabel3">
+              <property name="sizePolicy">
+               <sizepolicy hsizetype="Expanding" vsizetype="Preferred">
+                <horstretch>0</horstretch>
+                <verstretch>0</verstretch>
+               </sizepolicy>
+              </property>
               <property name="frameShape">
                <enum>QFrame::Box</enum>
               </property>
