--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -366,6 +366,9 @@ border-style:none;</string>
         <widget class="QWidget" name="dogSheetsPage"/>
         <widget class="EntryRegistry" name="entryRegistryPage">
          <layout class="QVBoxLayout" name="verticalLayout_2">
+          <property name="spacing">
+           <number>0</number>
+          </property>
           <item>
            <layout class="QHBoxLayout" name="entryLabelLayout">
             <property name="spacing">
@@ -379,11 +382,15 @@ border-style:none;</string>
                 <verstretch>0</verstretch>
                </sizepolicy>
               </property>
+              <property name="styleSheet">
+               <string notr="true">font-weight:bold;
+color:#212834;</string>
+              </property>
               <property name="frameShape">
                <enum>QFrame::Box</enum>
               </property>
               <property name="text">
-               <string>Entrée</string>
+               <string>ENTRÉE</string>
               </property>
               <property name="alignment">
                <set>Qt::AlignCenter</set>
@@ -398,11 +405,15 @@ border-style:none;</string>
                 <verstretch>0</verstretch>
                </sizepolicy>
               </property>
+              <property name="styleSheet">
+               <string notr="true">font-weight:bold;
+color:#212834;</string>
+              </property>
               <property name="frameShape">
                <enum>QFrame::Box</enum>
               </property>
               <property name="text">
-               <string>Animal</string>
+               <string>ANIMAL</string>
               </property>
               <property name="alignment">
                <set>Qt::AlignCenter</set>
@@ -417,11 +428,15 @@ border-style:none;</string>
                 <verstretch>0</verstretch>
                </sizepolicy>
               </property>
+              <property name="styleSheet">
+               <string notr="true">font-weight:bold;
+color:#212834;</string>
+              </property>
               <property name="frameShape">
                <enum>QFrame::Box</enum>
               </property>
               <property name="text">
-               <string>Sortie</string>
+               <string>SORTIE</string>
               </property>
               <property name="alignment">
                <set>Qt::AlignCenter</set>
@@ -440,6 +455,15 @@ border-style:none;</string>
             </property>
             <property name="styleSheet">
              <string notr="true"/>
+            </property>
+            <property name="frameShape">
+             <enum>QFrame::NoFrame</enum>
+            </property>
+            <property name="frameShadow">
+             <enum>QFrame::Sunken</enum>
+            </property>
+            <property name="lineWidth">
+             <number>0</number>
             </property>
             <property name="verticalScrollBarPolicy">
              <enum>Qt::ScrollBarAsNeeded</enum>
@@ -468,6 +492,11 @@ border-style:none;</string>
             <column>
              <property name="text">
               <string>#</string>
+             </property>
+             <property name="font">
+              <font>
+               <bold>false</bold>
+              </font>
              </property>
             </column>
             <column>
